# glob-lang

./: .gitignore  CHANGES.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  COMPILER.md  COURSE_CRITICAL_REVIEW.md  COURSE_ENHANCEMENT_SUMMARY.md  Cargo.toml  FUTURE_DEVELOPMENT.md  GLOB_REBRAND_SUMMARY.md  GLOB_V0.11.0_SUMMARY.md  GUL_REBRAND_SUMMARY.md  GUL_V0.11.0_SUMMARY.md  GUL_V2_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTION.md  INTEGRATION.md  PHASE1_COMPLETE.md  PHASE_10_COMPLETE.md  PHASE_1_9_REVIEW.md  PLAN.md  PROGRESS.md  PROJECT_STATUS.md  README.md  STRUCTURE.md  SUPPORT_PLATFORMS.md  SYNTAX.md  SYNTAX_STRUCTURE_COMPILER_REVIEW.md  SYNTAX_V2_PROPOSAL.md  TEST_VERIFICATION_REPORT.md  TODO.md  TODO_COMPLETION_SUMMARY.md  TUI.md  VERIFICATION_REPORT.md  WEBUI.md  plan1.md  review.md
.github/workflows/: ci.yml
examples/: beginner_tutorial.mn  c_inline.cs  embedded_blink.mn  js_inline.cs  programming_deck.rs  python_inline.cs  revised_syntax_demo.gul  rust_accelerated.cs  sql_query.mn  ts_inline.cs  tui_demo.rs  ui_slider.mn  web_fetch.mn
src/: ast.rs  compiler.rs  lib.rs  main.rs  parser.rs  semantic.rs
src/advanced/: chemistry.rs  distributed.rs  gpu.rs  linting.rs  physics.rs  symbolic_math.rs
src/autonomous/: ai_codegen.rs  optimizer.rs  refactoring.rs
src/compiler/: blocks.rs  builder.rs  codegen.rs
src/embedded/: power.rs  rtos.rs
src/lexer/: mod.rs
src/platform/: build_cache.rs  embedded.rs  embedded_targets.rs  mobile.rs  mobile_platform.rs  mod.rs  package_registry.rs  package_support.rs  packages.rs  rate_limit.rs  vulnerability.rs  wasm.rs  wasm_backend.rs
src/runtime/: async_runtime.rs  database.rs  ffi.rs  filesystem.rs  http_client.rs  math_science.rs  secrets.rs  ui_runtime.rs
src/tools/: code_executor.rs  course_enhanced.rs  debugger.rs  formatter.rs  ide.rs  linter.rs  mod.rs  profiler.rs  tui_ide.rs  web_ide.rs
templates/ai_app/: main.mn
templates/basic_project/: main.mn  scrt.def
templates/embedded/: main.mn
templates/web_app/: main.mn
tests/: sql_integration_tests.rs
web/: Cargo.toml  Dioxus.toml  IMPLEMENTATION_SUMMARY.md  index.html
web/public/: style.css
web/src/: main.rs
