[package]
name = "gul-website"
version = "0.11.0"
edition = "2021"
authors = ["GUL Team"]
description = "Official GUL Programming Language Website"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-web = "0.5"
dioxus-router = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
